--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,7 @@
 		"@typescript-eslint/no-unused-vars": "off",
 		"react/jsx-props-no-spreading": "off",
 		"import/no-extraneous-dependencies": "off",
-		"@typescript-eslint/no-explicit-any": "warn",
+		// "@typescript-eslint/no-explicit-any": "off", // Unexpected any type
 		"@typescript-eslint/no-unsafe-member-access": "off",
 		"import/extensions": [
 			"error",
@@ -67,8 +67,9 @@
 		"no-await-in-loop": "off",
 		"no-underscore-dangle": "off",
 		"react/prop-types": "off"
+
 		// "consistent-return": "off"
 		// "@typescript-eslint/no-unsafe-assignment": "off"
 	},
-	"ignorePatterns": ["functions/*"]
+	"ignorePatterns": []
 }
