--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
 		"**/*.tsx",
 		"cypress/**/*",
 		"jest.config.ts"
+		// "next.config.js"
 	],
 	"exclude": ["node_modules", "next.config.js"]
 }
