--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,7 @@
 		"no-console": "off",
 		"import/prefer-default-export": "off",
 		"react/function-component-definition": "off",
-		"react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
+		// "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
 		"react/react-in-jsx-scope": "off",
 		"@typescript-eslint/no-unused-vars": "off",
 		"react/jsx-props-no-spreading": "off",
