--- a/package.json
+++ b/package.json
@@ -81,6 +81,6 @@
 		"typescript-plugin-css-modules": "^4.2.2"
 	},
 	"lint-staged": {
-		"src/**/*.ts?(x)": "npm run lint"
+		"*.tsx": "npm run lint"
 	}
 }
