--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-BASE_URL = http://localhost:3001
+NEXT_PUBLIC_BASE_URL = http://localhost:3001
 
 NEXT_PUBLIC_API_KEY=AIzaSyCtwkgZDZU3SPrBeqwQW0vMFEVXsnhRo4M
 NEXT_PUBLIC_AUTH_DOMAIN=electron-server-8a9ab.firebaseapp.com
