--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev -p 3001",
 		"build": "next build",
-		"start": "next start",
+		"start": "next start -p 3001",
 		"lint": "next lint",
 		"lh": "npm run build && lhci autorun",
 		"test": "jest --watch --silent",
@@ -50,6 +50,7 @@
 		"framer-motion": "^10.0.1",
 		"lodash": "^4.17.21",
 		"next": "13.2.1",
+		"next-pwa": "^5.6.0",
 		"prettier": "^2.8.4",
 		"react": "18.2.0",
 		"react-chartjs-2": "^5.2.0",
